--- a/src/content/projects/2.md
+++ b/src/content/projects/2.md
@@ -3,4 +3,5 @@ name: "The Speed of Coffee"
 description: "A way to find fast wifi in a coffee shop near you"
 tools: ["NextJS", "Postgres", "AWS"]
 tags: [ "Development", "Tailwind"]
+siteUrl: "speedofcoffee.com"
 ---
