--- a/src/content/thoughts/1.md
+++ b/src/content/thoughts/1.md
@@ -1,8 +1,16 @@
 ---
-title: Because the universe needed a framework
+title: Thoughts about ChatGPT, constraints, and some things I remembered the other day
 pubDate: 11/22/2024
 ---
-Hello test
+When I was younger, probably about 9 or 10, I got one of my first tastes of technology in the form of an iPod Touch, 4th generation to be precise.
+To contextualize this time a bit, this was when Infinity Blade was one of the hottest mobile game around (RIP!).
+I was immediately hooked, and I wanted to have every app on the app store.
 \
+However, my parents knew better than to allow that, so they put a passcode and restrictions on the device.
+But me being my rebellious self, I knew better than them.
 \
+One day, I found a slip of paper under a couch cushion with a 4 numbers on it. 
+I connected the dots, and tried it on my iPod restrictions passcode, and wouldn't you know it, it worked. My days of l33t hacking had begun.
+\
+Next in my list of exploits against my parents was their restrictions on how
 markdown is cool
