--- a/src/content/projects/4.md
+++ b/src/content/projects/4.md
@@ -2,5 +2,6 @@
 name: "Beacon"
 description: "For the AIS 2025 Competition, an interactive chatbot application allowing users to chat with LLMs like ChatGPT to resolve IT issues, submit Jira tickets, recommend and execute allowlisted actions via SSH, schedule tasks, and continuously learn from its interactions via AutoML"
 tools: ["NextJS", "Postgres", "AI/ML", "Python"]
+siteUrl: "beacon.andrewbhudson.dev"
 tags: [ "Development"]
 ---
