Fix site URL format in project 5
Updated site URL to remove 'https://' prefix.

--- a/src/content/projects/5.md
+++ b/src/content/projects/5.md
@@ -2,7 +2,7 @@
 name: "Framewell"
 description: "A visual planner to design gallery walls and frame pairings in minutes."
 tools: ["NextJS", "TypeScript", "Tailwind", "Design"]
-siteUrl: "https://framewell.app"
+siteUrl: "framewell.app"
 tags: ["Development", "Design"]
 ---
 
